--- a/styles/lg.css
+++ b/styles/lg.css
@@ -47,6 +47,7 @@ a#scroll {
     
 .intro-font{
     font-family: 'Montserrat', sans-serif !important;
+    /* font-family: 'Open Sans', sans-serif !important; */
     font-weight: 400 !important;
     color: #212d50 !important;
     font-size: 30px !important;
@@ -55,6 +56,8 @@ a#scroll {
 }
       
 .intro-paragraph-font{
+    font-family: 'Montserrat', sans-serif !important;
+    /* font-family: 'Open Sans', sans-serif !important; */
     font-size: 30px !important;
     font-weight: 400 !important;
     color: #212d50 !important;
@@ -206,7 +209,7 @@ ul, li {
     height: 100%;
     display: inline-block;
     text-align: center;
-    padding: 0 20px 0px 0px;
+    padding: 0 35px 0px 0px;
     transition: all 0.3s ease;
     color: white;
     font-size: 20px;
@@ -231,6 +234,7 @@ ul, li {
 /* END ICON BAR */
 
 div.intro{
+    font-family: 'Open Sans', sans-serif !important;
     width: 100% !important;
     height: 30% !important;
     margin-top: 35% !important;
@@ -273,6 +277,7 @@ div.intro{
     grid-row: 1/3;
     width: 100%;
     height: 100%;
+    
 }
 .portfolio-heading-blurb{
     /* margin-left: 10% !important; */
@@ -282,14 +287,16 @@ div.intro{
     width: 70%;
     margin-top: 5%;
     margin-left: 10%;
+    
 }
 .portfolio-heading-text {
     font-family: 'Montserrat', sans-serif !important;
-    font-weight: 400 bold !important;
+    /* font-family: 'Open Sans', sans-serif !important; */
+    font-weight: 400 !important;
     color: #212d50 !important;
     font-size: 25px !important;
-    /* line-height: 45px; */
-    letter-spacing: 0px !important;
+    
+    letter-spacing: 3px !important;
 }
 
 .box-1 {
