--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -331,7 +331,7 @@ div.intro{
   overflow: hidden;
   width: 0;
   height: 100%;
-  transition: .2s ease;
+  transition: 1s ease;
   background-color: white !important;
 
 }
