--- a/styles/lg.css
+++ b/styles/lg.css
@@ -379,6 +379,42 @@ grid-column: 1 !important;
 grid-row: 7 !important;
 } */
 
+.resume-wrapper{
+    height: 150px;
+    width: 100%;
+    
+    grid-column: 5 / 8;
+    grid-row: 4 !important;
+    align-items: center;
+}
+
+.resume-button{
+    height: 60%;
+    width: 100%;
+    margin: 10% auto;
+    border: solid 1px;
+    border-color: lightgrey;
+    border-radius: 5px;
+}
+
+.resume-button-link{
+    margin: auto;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.resume-button-text{
+    font-family: 'Open Sans', sans-serif !important;
+    font-family: 'Open Sans', sans-serif !important;
+    font-size: 40px;
+    font-weight: 300;
+    letter-spacing: 10px;
+    color: gray !important;
+}
+
 
 .paragraph-container{
 
