--- a/styles/landscape.css
+++ b/styles/landscape.css
@@ -57,7 +57,7 @@ and (orientation: landscape) {
     transition: all 0.3s ease;
     /* color: white; */
     font-size: 20px;
-    /* display: none; */
+    display: none;
    
   }
   
