--- a/styles/lg.css
+++ b/styles/lg.css
@@ -608,7 +608,7 @@ label{
     border-left-color: transparent;
     border-top-color: transparent;
     border-right-color: transparent;
-    border-bottom-color: #212d50;
+    border-bottom-color: #212d50 !important;
 }
 
 input, textarea{
