--- a/styles/medium_bridge.css
+++ b/styles/medium_bridge.css
@@ -573,6 +573,107 @@ div#map{
     color: #43454B;
 }
 
+.contact-form{
+    height: 490px; 
+    grid-column: 5 / 11!important;
+    /* grid-row: 3 / 5 !important; */
+    margin-top: 10% !important;
+}
+form {
+    height: 100%;
+    width: 100%;
+    padding: 1em;
+    border: 1px solid #CCC;
+    border-radius: 1em;
+    grid-column: 1 / 5!important;
+    grid-row: 1 / 3 !important;
+}
+
+
+
+label{
+    font-family: 'Open Sans', sans-serif !important;
+    font-size: 14px;
+    display: inline-block;
+    width: 80px;
+    margin-bottom: 10px;
+    letter-spacing: 2px;
+    color: grey;
+    padding: 5px;
+    border: 1px solid;
+    border-left-color: transparent;
+    border-top-color: transparent;
+    border-right-color: transparent;
+    border-bottom-color: #212d50 !important;
+}
+
+input, textarea{
+    overflow: visible;
+    border-color: transparent;
+    font-family: 'Open Sans', sans-serif !important;
+    font-size: 15px;
+    font-weight: 400;
+
+}
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
+}
+
+
+.form-name{
+    width: 30% !important;
+    height: 5%;
+    margin-top: 2%;
+    margin-right: 0 !important;
+    position: absolute;
+}
+
+.form-email{
+    width: 30%;
+    height: 5%;
+    margin-left: 25%;
+    margin-top: 2%;
+    position: absolute;
+}
+.form-msg{
+    width: 100%;
+    margin-top: 15%;
+}
+
+textarea {
+    overflow: auto;
+    width: 100%;
+    height: 250px;
+}
+
+.form-button{
+    display: flex;
+    /* align-content: center; */
+    justify-content: space-around;
+    height: 50px;
+    width: 150px;
+    
+}
+
+button{
+    width: 100%;
+    border-radius: 5px;
+    /* line-height: 1.15; */
+    margin: 0;
+    background-color: transparent;
+    font-family: 'Open Sans', sans-serif !important;
+    font-size: 15px;
+    font-weight: 300;
+    letter-spacing: 10px;
+    color: gray !important;
+    cursor: pointer;
+}
+
+
 div.footer {
     display: flex !important;
     flex-direction: row !important;
