--- a/styles/landscape.css
+++ b/styles/landscape.css
@@ -630,6 +630,109 @@ and (orientation: landscape) {
     font-size: 11px !important;
     color: #43454B;
   }
+
+  .contact-form{
+    height: 390px;
+    grid-column: 1 !important;
+    grid-row: 3 !important;
+    margin-top: 35% !important;
+    /* margin-bottom: 20%; */
+  }
+  form {
+    height: 100%;
+      width: 100%;
+      padding: 1em;
+      border: 1px solid #CCC;
+      border-radius: 1em;
+      grid-column: 1 / 5!important;
+      grid-row: 1 / 3 !important;
+  }
+  
+  
+  
+  label{
+    font-family: 'Open Sans', sans-serif !important;
+    font-size: 11px;
+    display: inline-block;
+    width: 50px;
+    margin-bottom: 10px;
+    letter-spacing: 2px;
+    color: grey;
+    padding: 2px;
+    border: 1px solid;
+    border-left-color: transparent;
+    border-top-color: transparent;
+    border-right-color: transparent;
+    border-bottom-color: #212d50 !important;
+  }
+  
+  input, textarea{
+    overflow: visible;
+    border-color: transparent;
+    font-family: 'Open Sans', sans-serif !important;
+    font-size: 15px;
+    font-weight: 400;
+  
+  }
+  
+  input:focus,
+  select:focus,
+  textarea:focus,
+  button:focus {
+    outline: none;
+  }
+  
+  
+  .form-name{
+    width: 100% !important;
+    height: 5%;
+    margin-top: 4%;
+    margin-right: 0 !important;
+    position: absolute;
+  }
+  
+  .form-email{
+    width: 100%;
+    height: 5%;
+    margin-left: 0%;
+    margin-top: 12%;
+    position: absolute;
+    
+  }
+  .form-msg{
+    width: 100%;
+    margin-top: 25%;
+  }
+  
+  textarea {
+    overflow: auto;
+    width: 100%;
+    height: 100px;
+  }
+  
+  .form-button{
+    display: flex;
+    /* align-content: center; */
+    justify-content: space-around;
+    height: 40px;
+    width: 100px;
+    
+  }
+  
+  button{
+    width: 100%;
+      border-radius: 5px;
+      /* line-height: 1.15; */
+      margin: 0;
+      background-color: transparent;
+      font-family: 'Open Sans', sans-serif !important;
+      font-size: 10px;
+      font-weight: 300;
+      letter-spacing: 5px;
+      color: gray !important;
+      cursor: pointer;
+  }
+  
   
     div.footer {
         display: flex !important;
@@ -638,7 +741,7 @@ and (orientation: landscape) {
         align-items: center !important;
         bottom: 0 !important;
         border-top: 1px solid lightgray !important;
-        margin-top: 65% !important;
+        margin-top: 95% !important;
         height: 10% !important;
         width: 100% !important;
   }
