--- a/styles/medium.css
+++ b/styles/medium.css
@@ -448,7 +448,7 @@
       .about-blurb-tittle {
         margin-bottom: 5% !important;
         font-family: 'Montserrat', sans-serif !important;
-        font-weight: 400 bold !important;
+        font-weight: 400  !important;
         color: #212d50 !important;
         font-size: 35px !important;
         /* line-height: 45px; */
@@ -468,7 +468,7 @@
         background-repeat: no-repeat !important;
         height: 400px !important;
         width: 400px !important;
-        margin-top: 0% !important;
+        margin-top: 10% !important;
         grid-column: 1 !important;
         grid-row: 2 !important;
         display: block !important;
@@ -537,7 +537,7 @@
         height: 400px !important;
         width: 100% !important;
         margin-left: 0 !important;
-        margin-top: 0% !important;
+        margin-top: 10% !important;
         /* margin-right: 40% !important; */
       
       }
@@ -546,7 +546,7 @@
       .contact-page{ 
         grid-column: 1 !important;
         grid-row: 2 !important;
-        margin-top: 15% !important;
+        margin-top: 35% !important;
       }
       
       #map{
@@ -588,6 +588,7 @@
     grid-row: 3 !important;
     /* margin-top: 10% !important; */
     margin-bottom: 20%;
+    margin-top: 20%;
   }
   form {
       height: 100%;
@@ -692,8 +693,8 @@
         align-items: center !important;
         bottom: 0 !important;
         border-top: 1px solid lightgray !important;
-        margin-top: 65% !important;
-        height: 5% !important; 
+        margin-top: 95% !important;
+        height: 7% !important; 
         width: 100% !important;
     }
     .footer-text {
