--- a/styles/medium_bridge.css
+++ b/styles/medium_bridge.css
@@ -457,7 +457,7 @@ grid-row: 7 !important;
 .about-blurb-tittle {
     margin-bottom: 5% !important;
     font-family: 'Montserrat', sans-serif !important;
-    font-weight: 400 bold !important;
+    font-weight: 400 !important;
     color: #212d50 !important;
     font-size: 35px !important;
     /* line-height: 45px; */
@@ -537,7 +537,7 @@ div#map{
 .contact-page{ 
     grid-column: 2 / 5 !important;
     grid-row: 3 !important;
-    margin-top: 20% !important;
+    margin-top: 40% !important;
 }
 
 /* #map{ */
@@ -577,7 +577,7 @@ div#map{
     height: 490px; 
     grid-column: 5 / 11!important;
     /* grid-row: 3 / 5 !important; */
-    margin-top: 10% !important;
+    margin-top: 20% !important;
 }
 form {
     height: 100%;
@@ -681,7 +681,7 @@ div.footer {
     align-items: center !important;
     bottom: 0 !important;
     border-top: 1px solid lightgray !important;
-    margin-top: 30% !important;
+    margin-top: 50% !important;
     height: 5% !important; 
     width: 100% !important;
 }
