--- a/styles/lg.css
+++ b/styles/lg.css
@@ -456,7 +456,7 @@ grid-row: 7 !important;
 .about-blurb-tittle {
     margin-bottom: 5% !important;
     font-family: 'Montserrat', sans-serif !important;
-    font-weight: 400 bold !important;
+    font-weight: 400 !important;
     color: #212d50 !important;
     font-size: 35px !important;
     /* line-height: 45px; */
